force-app/main/default/src/objects/PJN_Assistance_Program__c/PJN_Assistance_Program__c.object-meta.xml
<CustomObject>
    <description>Stores the application details and approval status of enrollments to various Assistance Programs</description>
    <label>Assistance Program</label>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Assistance Program</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assistance Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>