force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/Calculated_Monthly_Out_of_Pocket__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Monthly_Out_of_Pocket__c</fullName>
    <label>Calculated Monthly Out of Pocket</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>