force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/MVN_Active__c.field-meta.xml
<CustomField>
    <fullName>MVN_Active__c</fullName>
    <description>Uses the Effective Date and Expiration Date formulas as opposed to the Effective Date and Expiration Date editable date fields.</description>
    <formula>OR(
AND(TODAY() &gt;= MVN_Effective_Date_Formula__c,
TODAY() &lt;= MVN_Expiration_Date_Formula__c,
TEXT(PJN_Outcome__c) == &apos;Eligible&apos;),
AND(RecordType.DeveloperName = &quot;PJN_Copay&quot;,
MVN_Copay_Is_Active__c),
AND(RecordType.DeveloperName = &quot;MVN_Clinical_Trial_Transition_Program&quot;,
TEXT(PJN_Outcome__c) == &apos;Eligible&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>