force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/MVN_Card_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Card_Activation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Card Activation Date</label>
    <type>Date</type>
</CustomField>