force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/MVN_Commercial_Private_Insurance__c.field-meta.xml
<CustomField>
    <fullName>MVN_Commercial_Private_Insurance__c</fullName>
    <label>Commercial Private Insurance?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MVN_Yes_No</valueSetName>
    </valueSet>
</CustomField>