force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/MVN_Copay_BIN__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_BIN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Copay BIN</label>
    <length>6</length>
    <type>Text</type>
</CustomField>