force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/MVN_Copay_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Effective_Date__c</fullName>
    <description>Date and time when the membership becomes active.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Copay Effective Date</label>
    <type>DateTime</type>
</CustomField>