force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/MVN_Copay_Enrollment_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Enrollment_Id__c</fullName>
    <description>The unique identifier for the enrollment.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Copay Enrollment Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>