force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/MVN_Copay_Enrollment_Success__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Enrollment_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copay Enrollment Success</label>
    <type>Checkbox</type>
</CustomField>