force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/MVN_Copay_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Issued_Date__c</fullName>
    <description>Date and time when the membership was issued in ISO 8601 Notation.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Copay Issued Date</label>
    <type>DateTime</type>
</CustomField>