force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/MVN_Copay_Patient_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Patient_Id__c</fullName>
    <description>The unique identifier for the Patient.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Copay Patient Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>