force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/MVN_Copay_Total_Uses__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Total_Uses__c</fullName>
    <description>Maximum times the membership benefit can be used.</description>
    <label>Copay Total Uses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>