force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/MVN_Copay_Usage_Period_Unit__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Usage_Period_Unit__c</fullName>
    <description>The unit for the relative time period that the membership benefit.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Copay Usage Period Unit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>