force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/MVN_Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>MVN_Denial_Reason__c</fullName>
    <label>Denial Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient Income Exceeds Guidelines</fullName>
            </value>
            <value>
                <fullName>Prescription Coverage Available</fullName>
            </value>
            <value>
                <fullName>Unsupported Diagnosis</fullName>
            </value>
            <value>
                <fullName>Not Permanent US Resident</fullName>
            </value>
            <value>
                <fullName>Eligibility Appeal Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>