force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/MVN_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>MVN_Document_Type__c</fullName>
    <label>Document Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Federal Tax Returns</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pay Stubs</fullName>
            </value>
            <value>
                <fullName>Real-Time Income Projector</fullName>
            </value>
            <value>
                <fullName>Social Security Benefits</fullName>
            </value>
            <value>
                <fullName>W-2 Forms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>