force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/MVN_Effective_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_Effective_Date_Formula__c</fullName>
    <description>Displays the Effective Date for all record types except Copay, for which the Card Activation Date is displayed instead. Used in compact layouts, related lists, and field sets.</description>
    <formula>IF(RecordType.DeveloperName = &quot;PJN_Copay&quot;, DATEVALUE(MVN_Copay_Effective_Date__c), PJN_Effective_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>