force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/MVN_Eligibility_Type__c.field-meta.xml
<CustomField>
    <fullName>MVN_Eligibility_Type__c</fullName>
    <label>Eligibility Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Functionally Uninsured</fullName>
            </value>
            <value>
                <fullName>Insurance Status Change</fullName>
            </value>
            <value>
                <fullName>Insured - Commercial</fullName>
            </value>
            <value>
                <fullName>Insured - Government</fullName>
            </value>
            <value>
                <fullName>Medicare Part B</fullName>
            </value>
            <value>
                <fullName>PA/Appeal Processing</fullName>
            </value>
            <value>
                <fullName>Pending PA Appeal</fullName>
            </value>
            <value>
                <fullName>Product Acquisition Delay</fullName>
            </value>
            <value>
                <fullName>Unaffordable - Medicare Advantage</fullName>
            </value>
            <value>
                <fullName>Unaffordable - Part D</fullName>
            </value>
            <value>
                <fullName>Uninsured</fullName>
            </value>
            <value>
                <fullName>Uninsured - Alternate Coverage</fullName>
            </value>
            <value>
                <fullName>Uninsured - Income Above PAP</fullName>
            </value>
            <value>
                <fullName>Uninsured - Income Below PAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>