force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/MVN_Government_Sponsored_Program__c.field-meta.xml
<CustomField>
    <fullName>MVN_Government_Sponsored_Program__c</fullName>
    <label>Government Sponsored Program?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MVN_Yes_No</valueSetName>
    </valueSet>
</CustomField>