force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/MVN_Group__c.field-meta.xml
<CustomField>
    <fullName>MVN_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>