force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/MVN_Household_Income__c.field-meta.xml
<CustomField>
    <fullName>MVN_Household_Income__c</fullName>
    <description>Specifies the annual household income as reported by the patient.</description>
    <inlineHelpText>The annual household income as reported by the patient.</inlineHelpText>
    <label>Household Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>