force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/MVN_Household_Size__c.field-meta.xml
<CustomField>
    <fullName>MVN_Household_Size__c</fullName>
    <description>Specifies the number of people in a patient&apos;s household as reported by the patient.</description>
    <inlineHelpText>The number of people who live in the patient&apos;s household as reported by the patient.</inlineHelpText>
    <label>Household Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>