force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/MVN_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>MVN_Member_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Member ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>