force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/MVN_Months_Supply_Eligible__c.field-meta.xml
<CustomField>
    <fullName>MVN_Months_Supply_Eligible__c</fullName>
    <label>Months&apos; Supply Eligible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>