force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/MVN_Next_Scheduled_Treatment_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Next_Scheduled_Treatment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Scheduled Treatment Date</label>
    <type>Date</type>
</CustomField>