force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/MVN_Other_Documents__c.field-meta.xml
<CustomField>
    <fullName>MVN_Other_Documents__c</fullName>
    <description>Document category that is not available under the Document Type field selection.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Documents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>