force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/PJN_Account__c.field-meta.xml
<CustomField>
    <fullName>PJN_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Account which the Assistance Program Eligibility is related to. This lookup is set automatically by process automation based on the Account associated to the Care Plan.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Assistance_Program_Eligibility</relationshipName>
    <type>Lookup</type>
</CustomField>