force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/PJN_Active__c.field-meta.xml
<CustomField>
    <fullName>PJN_Active__c</fullName>
    <description>Indicates whether  the Assistance Program is currently Active</description>
    <formula>TODAY() &gt;=  PJN_Effective_Date__c &amp;&amp; 
TODAY() &lt;=  PJN_Expiration_Date__c &amp;&amp;
 TEXT( PJN_Outcome__c ) == &apos;Eligible&apos;</formula>
    <inlineHelpText>Indicates whether  the Assistance Program is currently Active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>