force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/PJN_Address__c.field-meta.xml
<CustomField>
    <fullName>PJN_Address__c</fullName>
    <description>Address value sent to the Financial Clearing House for a PAP Eligibility Request</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Address value sent to the Financial Clearing House for a PAP Eligibility Request</inlineHelpText>
    <label>Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>