force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/PJN_Address_Lookup__c.field-meta.xml
<CustomField>
    <fullName>PJN_Address_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Address to pull information from</description>
    <inlineHelpText>Address record to pull information from. This value will supercede the Account Primary address, but not a value in the Address field of this record.</inlineHelpText>
    <label>Address Lookup</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must select an Address Contact Information record associated to the patient.</errorMessage>
        <filterItems>
            <field>PJN_Contact_Information__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PJN_Address</value>
        </filterItems>
        <filterItems>
            <field>PJN_Contact_Information__c.PJN_Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.PJN_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PJN_Contact_Information__c</referenceTo>
    <relationshipName>Patient_Assistance_Programs_Address</relationshipName>
    <type>Lookup</type>
</CustomField>