force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/PJN_Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>PJN_Care_Plan__c</fullName>
    <label>Care Plan</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Assistance Programs</relationshipLabel>
    <relationshipName>Assistance_Programs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>