force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/PJN_City__c.field-meta.xml
<CustomField>
    <fullName>PJN_City__c</fullName>
    <description>City value sent to the Financial Clearing House for a PAP Eligibility Request</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>City value sent to the Financial Clearing House for a PAP Eligibility Request</inlineHelpText>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>