force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/PJN_Coverage_Investigation__c.field-meta.xml
<CustomField>
    <fullName>PJN_Coverage_Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Coverage Investigation where the Assistance Program was generated from.</description>
    <label>Coverage Investigation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.PJN_Care_Plan__c</field>
            <operation>equals</operation>
            <valueField>PJN_Coverage_Investigation__c.PJN_Care_Plan__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PJN_Coverage_Investigation__c</referenceTo>
    <relationshipLabel>Assistance Programs</relationshipLabel>
    <relationshipName>Assistance_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>