force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/PJN_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_of_Birth__c</fullName>
    <description>Date of Birth value sent to the Financial Clearing House for a PAP Eligibility Request</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Date of Birth value sent to the Financial Clearing House for a PAP Eligibility Request</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>