force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/PJN_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Effective_Date__c</fullName>
    <description>Date the Assistance Program is effective from.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>