force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/PJN_Estimated_Household_Income__c.field-meta.xml
<CustomField>
    <fullName>PJN_Estimated_Household_Income__c</fullName>
    <description>Estimated Household Income returned from the financial clearing house</description>
    <inlineHelpText>Estimated Household Income returned from the financial clearing house</inlineHelpText>
    <label>Reported Annual Household Income</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>