force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/PJN_Estimated_Household_Size__c.field-meta.xml
<CustomField>
    <fullName>PJN_Estimated_Household_Size__c</fullName>
    <description>Estimated Household Size returned from Financial Clearing House</description>
    <inlineHelpText>Estimated Household Size returned from Financial Clearing House</inlineHelpText>
    <label>Estimated Household Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>