force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/PJN_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Expiration_Date__c</fullName>
    <description>Date which the Assistance Program is effective to.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>