force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/PJN_Federal_Poverty_Level_Percentage__c.field-meta.xml
<CustomField>
    <fullName>PJN_Federal_Poverty_Level_Percentage__c</fullName>
    <description>Estimated ratio of income for household size against the federal poverty level returned from the financial clearing house</description>
    <inlineHelpText>Estimated ratio of income for household size against the federal poverty level returned from the financial clearing house</inlineHelpText>
    <label>Federal Poverty Level Percentage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>