force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/PJN_First_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_First_Name__c</fullName>
    <description>First Name value sent to the Financial Clearing House for a PAP Eligibility Request</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>First Name value sent to the Financial Clearing House for a PAP Eligibility Request</inlineHelpText>
    <label>First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>