force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/PJN_Member_Plan__c.field-meta.xml
<CustomField>
    <fullName>PJN_Member_Plan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the Member Plan which a Copay Assistance Program is linked to.</description>
    <label>Member Plan</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must select a Member Plan from the same Care Plan.</errorMessage>
        <filterItems>
            <field>PJN_Member_Plan__c.PJN_Care_Plan__c</field>
            <operation>equals</operation>
            <valueField>$Source.PJN_Care_Plan__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PJN_Member_Plan__c</referenceTo>
    <relationshipLabel>Copay Assistance Programs</relationshipLabel>
    <relationshipName>Assistance_Program</relationshipName>
    <type>Lookup</type>
</CustomField>