force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/PJN_Outcome__c.field-meta.xml
<CustomField>
    <fullName>PJN_Outcome__c</fullName>
    <description>The outcome of the application to enroll into an Assistance Program.</description>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>