force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/PJN_PAP_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>PJN_PAP_Eligibility__c</fullName>
    <description>Displays the eligibility status for PAP.</description>
    <formula>IF ( 
  ISBLANK( PJN_Federal_Poverty_Level_Percentage__c ),
  &apos;Pending Evaluation&apos;,
  IF ( PJN_Federal_Poverty_Level_Percentage__c &lt;= PJN_Program_Federal_Poverty_Threshold__c,
   
    &apos;Eligible&apos;,
    &apos;Ineligible&apos;
  )
)</formula>
    <inlineHelpText>Displays the eligibility status for PAP.</inlineHelpText>
    <label>PAP Eligibility</label>
    <type>Text</type>
</CustomField>