force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/PJN_Phone__c.field-meta.xml
<CustomField>
    <fullName>PJN_Phone__c</fullName>
    <description>Phone value sent to the Financial Clearing House for a PAP Eligibility Request.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Phone value sent to the Financial Clearing House for a PAP Eligibility Request.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>