force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/PJN_Phone_Lookup__c.field-meta.xml
<CustomField>
    <fullName>PJN_Phone_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The phone record to pull data from</description>
    <inlineHelpText>Phone record to pull information from. This value will supercede the Account Primary phone, but not a value in the Phone field of this record.</inlineHelpText>
    <label>Phone Lookup</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must select a Phone Contact Information record associated to the patient.</errorMessage>
        <filterItems>
            <field>PJN_Contact_Information__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PJN_Phone</value>
        </filterItems>
        <filterItems>
            <field>$Source.PJN_Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.PJN_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PJN_Contact_Information__c</referenceTo>
    <relationshipName>Patient_Assistance_Programs_Phone</relationshipName>
    <type>Lookup</type>
</CustomField>