force-app/main/default/src/objects/PJN_Assistance_Program__c/fields/PJN_Program_Federal_Poverty_Threshold__c.field-meta.xml
<CustomField>
    <fullName>PJN_Program_Federal_Poverty_Threshold__c</fullName>
    <description>The eligibility threshold set for the federal poverty level for the program the parent care plan is linked to.</description>
    <inlineHelpText>The eligibility threshold set for the federal poverty level for the program the parent care plan is linked to.</inlineHelpText>
    <label>Program Federal Poverty Threshold</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>